--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -325,29 +325,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(54.0, 85.0, 71.66378066378067)]"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
     "# highest temperature recorded, and average temperature most active station?\n",
-    "session.query(func.min(Measurement.tobs),func.max(Measurement.tobs),func.avg(Measurement.tobs)).filter(Measurement.station == 'USC00519281').all()"
+    "minmax_temp = session.query(func.min(Measurement.tobs),func.max(Measurement.tobs),func.avg(Measurement.tobs)).filter(Measurement.station == 'USC00519281').all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -396,12 +385,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(58.0, 74.14387974230493, 87.0)]"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n"
+    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
+    "\n",
+    "def calc_temps(start_date, end_date):\n",
+    "    c_results = session.query(func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)).\\\n",
+    "                    filter(Measurement.date >= start_date).filter(Measurement.date <= end_date).all()\n",
+    "    return c_results\n",
+    "calc_temps('2017-01-01', '2017-12-31')"
    ]
   },
   {
